Visual e interações do mouse

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         </section>
         <section> 
             <h1 class="entrada" id="Mega">Mega-Sena</h1>
-            <input type="text" class="escrita" id="jogos" placeholder="Nº de jogos">
-            <input type="button" class="botao" id="gerar-jogos" value="Gerar" onClick="">
+            <input type="number" class="escrita" id="jogos" placeholder="Nº de jogos">
+            <input type="button" class="botao" id="gerar-jogos" value="Gerar" onClick=Sena()>
+            <h3 id ="saida"></h3>     
         </section>
     </main>
 </body>
