--- a/projetos.html
+++ b/projetos.html
@@ -58,7 +58,7 @@
         <section> 
             <h1 class="entrada" id="Mega">Mega-Sena</h1>
             <input type="number" class="escrita" id="jogos" placeholder="Nº de jogos">
-            <input type="button" class="botao" id="gerar-jogos" value="Gerar" onClick=Sena()>
+            <input type="button" class="botao" id="gerar-jogos" value="Gerar" onClick=Quantia()>
             <h3 class="entrada" id="saida"></h3>
         </section>
     </main>
