--- a/projetos.html
+++ b/projetos.html
@@ -15,6 +15,7 @@
     <header>
         <a href="index.html">Início</a>
         <a href="projetos.html">Projetos</a>
+        <a href="bd.html">Banco</a>
     </header>
     <main>
 
